--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,12 +31,12 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
-    --ring: 215 20.2% 65.1%;
+    --ring: 200 100% 43.3%;
 
     --radius: 0.5rem;
   }
 
-  .dark {
+  /* .dark {
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
 
@@ -67,7 +67,7 @@
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
-  }
+  } */
 }
 
 @layer base {
